# ngendb

./: .gitignore  README.md  ngdb_admin.py  ngdb_tasks.py  pyproject.toml
ngendb/: __init__.py  db.py  definitions.py  readme.md
ngendb/assets/: fetch_genomes.py  report.py
ngendb/create/: create_funcs.py
ngendb/startup/: add_nf_tables.py  create_duck_db.py  create_funcs.py
ngendb/util.py/: atb_util.py
ngendb/utils/: io_utils.py
